# leapWP

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT_SUMMARY.txt  DEPLOY_INSTRUCTIONS.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  START_HERE.md  VERCEL_CHECKLIST.md  VERCEL_DEPLOYMENT.md  VERCEL_READY.md  pyproject.toml  requirements.txt  vercel.json  wsgi.py
data/database/: leap_ielts.db-shm  leap_ielts.db-wal
scripts/: seed_data.py  setup_db.py
src/leap_ielts/: __init__.py
src/leap_ielts/cli/: __init__.py  main.py
src/leap_ielts/core/algorithms/: __init__.py  goal_assignment.py  incentive_manager.py  leaderboard_ranker.py  skill_analyzer.py  streak_calculator.py
src/leap_ielts/core/domain/: __init__.py  exceptions.py
src/leap_ielts/core/services/: activity_service.py  progress_service.py  user_service.py
src/leap_ielts/data/: __init__.py  database.py  models.py
src/leap_ielts/data/repositories/: activity_repository.py  base.py  completion_repository.py  goal_repository.py  leaderboard_repository.py  progress_repository.py  user_repository.py
src/leap_ielts/utils/: __init__.py  config.py  logging.py
src/leap_ielts/web/: __init__.py  app.py
src/leap_ielts/web/blueprints/: __init__.py  activity.py  admin.py  auth.py  dashboard.py
src/leap_ielts/web/templates/: base.html
src/leap_ielts/web/templates/activity/: daily_goal.html  list.html
src/leap_ielts/web/templates/auth/: login.html  register.html
src/leap_ielts/web/templates/dashboard/: index.html  profile.html
tests/: conftest.py
tests/integration/: test_user_journey.py
tests/unit/: test_goal_assignment.py  test_streak_calculator.py
